# NGC

./: .gitignore  CMakeLists.txt  README.md
Supplementary Files/: Readme.md  Supplementary_File_SF1.xlsx  Supplementary_File_SF2.xlsx  Supplementary_File_SF3.xlsx  Supplementary_File_SF4.xlsx  Supplementary_File_SF5.xlsx
dna/comp/: TestFASTA.zst  comp.md
dna/decomp/: decomp.md
dna/denorm/: TestFASTA.txt  denorm.md
dna/norm/: norm.md
dna/raw/: TestFASTQ.fastq  TestMultiFASTA.fa  raw.md
executables/: bzip2  cmix  huffman_decode  huffman_encode  paq8px  zpaq  zstd
main/: a.out  compNormalize.cpp  compile.sh  cpuUsage.c  cpuUsage.h  decompNormalize.cpp  defs.h  denormalize.cpp  execute.cpp  main  mgc.cpp  normalize.cpp  test.cpp
main/Test/: Normalization.cpp
main/dna/norm/: TestFASTA_raw.txt
